--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -219,6 +219,10 @@ details[open] > summary {
     border-bottom: 2px solid #505050;
 }
 
+details summary::-webkit-details-marker {
+    display:none;
+}
+
 p {
     color:#000000;
     font-family:"Raleway",sans-serif;
