Add ::marker pseudoelement for compatability

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -222,7 +222,7 @@ details[open] > summary {
 details > summary {
     list-style: none;
 }
-
+details > summary::marker,
 details > summary::-webkit-details-marker {
     display:none;
 }
