--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -203,14 +203,15 @@ details > p {
     margin: 5px;
 }
 
-summary::after {
-    margin-left: 1ch;
+summary::before {
+    margin-right: 1ch;
     display: inline-block;
+    font-size: 32px;
     transition: 0.2s;
     content: '\203A';
 }
 
-details[open] > summary::after {
+details[open] > summary::before {
     transform: rotate(90deg);
 }
 
