--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -205,6 +205,7 @@ details > p {
 
 summary::before {
     margin-right: 1ch;
+    margin-left: 1ch;
     display: inline-block;
     font-size: 32px;
     transition: 0.2s;
