Add gradient to .docHead

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -245,7 +245,7 @@ h1.docHead {
     font-size: 76px;
     border-radius: 20px;
     color:#3030f0;
-    background-color: #9090ff;
+    background:  linear-gradient(#9090ff, #8080ff);
     padding: 7px;
     margin: 0px;
     display: inline-block;
