--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -183,9 +183,8 @@ details {
     border: 2px solid #505050;
     border-radius: 10px;
     padding: 0;
-    margin: 5px;
+    margin: auto;
     display: block;
-    float: center;
 }
 
 summary {
