Add navbar to themes

--- a/azurelyte/lightmode.css
+++ b/azurelyte/lightmode.css
@@ -1,3 +1,11 @@
+#navbar {
+    background-color: #fcfcfc;
+}
+
+#navbar-expanded {
+    background-color: #fcfcfc;
+}
+
 body {
     background-color: #fcfcfc;
 }
