--- a/azurelyte/darkmode.css
+++ b/azurelyte/darkmode.css
@@ -1,3 +1,11 @@
+#navbar {
+    background-color: #2d2d2d;
+}
+
+#navbar-expanded {
+    background-color: #2d2d2d;
+}
+
 body {
     background-color: #2d2d2d;
 }
