--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -180,7 +180,7 @@ details {
     border: 2px solid #505050;
     border-radius: 10px;
     padding: 0;
-    margin: auto;
+    margin: max(5px, auto);
     margin-top: 5px;
     display: block;
 }
