--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -180,11 +180,15 @@ margins keep collapsing, so it needs to be all padding. */
 details {
     border: 2px solid #505050;
     border-radius: 10px;
-    padding: 5px;
+    padding: 0;
     margin: auto;
     margin-top: 5px;
     margin-bottom: 5px;
     display: block;
+}
+
+.details-content {
+    margin:5px;
 }
 
 summary {
