--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -242,6 +242,7 @@ p {
     font-family:"Raleway",sans-serif;
     font-size:20px;
     cursor: default;
+    transition: color 0.5s;
 }
 
 h1.docHead {
