--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -201,7 +201,9 @@ summary {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     padding: 5px;
-    transition: background-color 0.2s;
+    transition: 
+        background-color 0.2s,
+        color 0.5s;
 }
 
 details > p {
