--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -214,7 +214,8 @@ summary::before {
     margin-right: 1ch;
     margin-left: 1ch;
     display: inline-block;
-    font-size: 32px;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
     transition: color 0.5s;
     content: '▼';
 }
