--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -214,14 +214,13 @@ summary::before {
     margin-right: 1ch;
     margin-left: 1ch;
     display: inline-block;
-    font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 32px;
     transition: color 0.5s;
-    content: '▼';
+    content: '+';
 }
 
 details[open] > summary::before {
-    content: '-';
+    transform: rotate(45deg);
 }
 
 details[open] > summary {
