Fix summary::after rotation

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -221,7 +221,7 @@ summary::after {
     content: '+';
 }
 
-details[open] > summary::before {
+details[open] > summary::after {
     rotate: 45deg;
 }
 
