--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -217,13 +217,13 @@ summary::after {
     font-size: 32px;
     transition: 
         color 0.5s,
-        rotate 0.2s;
-    rotate: 0deg;
+        transform 0.2s;
     content: '+';
 }
 
 details[open] > summary::after {
-    rotate: 45deg;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 details[open] > summary {
