Add margin-top to .navlink

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -118,6 +118,7 @@ margins keep collapsing, so it needs to be all padding. */
     font-size: 24px;
     font-family: "Comfortaa", sans-serif;
     transition: 0.2s;
+    margin-top: 16px;
 }
 
 .navlink:hover {
