--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -109,8 +109,7 @@ margins keep collapsing, so it needs to be all padding. */
 .navlink {
     user-select: none;
     cursor: pointer;
-    height: 48px;
-    padding: 3px;
+    padding: 0;
     display: block;
     position: static;
     white-space: nowrap;
@@ -118,7 +117,8 @@ margins keep collapsing, so it needs to be all padding. */
     font-size: 24px;
     font-family: "Comfortaa", sans-serif;
     transition: 0.2s;
-    margin-top: 10px;
+    margin: 3px;
+    padding: 24px;
 }
 
 .navlink:hover {
