Include only .navbar border-right in lightmode.css

--- a/azurelyte/lightmode.css
+++ b/azurelyte/lightmode.css
@@ -4,7 +4,7 @@
 
 #navbar-expanded {
     background-color: #fcfcfc;
-    border: 2px solid #2d2d2d;
+    border-right: 2px solid #2d2d2d;
     border-left: none;
 }
 
