Remove left border in darkmode.css

--- a/azurelyte/darkmode.css
+++ b/azurelyte/darkmode.css
@@ -4,7 +4,8 @@
 
 #navbar-expanded {
     background-color: #2d2d2d;
-    border: 2px solid #f0f0f0;
+    border-right: 2px solid #f0f0f0;
+    border-left: none;
 }
 
 body {
