--- a/azurelyte/lightmode.css
+++ b/azurelyte/lightmode.css
@@ -8,6 +8,10 @@
     border-left: none;
 }
 
+.navbarIcon, .navlink {
+    color: #2d2d2d;
+}
+
 body {
     background-color: #fcfcfc;
 }
@@ -16,6 +20,6 @@ p, button, summary, summary::after {
     color: #000000;
 }
 
-.navbarIcon, .navlink {
-    color: #2d2d2d;
+details[open] > summary {
+    background-color: #b0b0ff;
 }
