--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -117,6 +117,7 @@ margins keep collapsing, so it needs to be all padding. */
     transition: 0.2s;
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-top: 3px;
 }
 
 .navlink:hover {
