--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -178,7 +178,7 @@ margins keep collapsing, so it needs to be all padding. */
 details {
     border: 2px solid #808080;
     border-radius: 10px;
-    padding: 0;
+    padding: 5px;
     margin: auto;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -186,7 +186,7 @@ details {
 }
 
 .details-content {
-    margin:5px;
+    margin: 0px;
 }
 
 summary {
