Fix changelog format and add prototype theme button

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -144,6 +144,11 @@ margins keep collapsing, so it needs to be all padding. */
     background-color: #80808050;
 }
 
+#themeButton {
+    display: block;
+    float: right;
+}
+
 #closeBttn {
     float: right;
 }
