Button formatting test

--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -144,16 +144,20 @@ margins keep collapsing, so it needs to be all padding. */
     background-color: #80808050;
 }
 
-#themeButton {
-    position: fixed;
-    right: 10px;
-    bottom: 10px;
-    width: 100px;
-    height: 100px;
-    text-align: center;
-    border-radius: 50%;
-    background-color: black;
-    color: white;
+#myBtn {
+    display: block; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
 }
 
 #closeBttn {
