--- a/azurelyte/styles.css
+++ b/azurelyte/styles.css
@@ -152,7 +152,7 @@ margins keep collapsing, so it needs to be all padding. */
     height: 60px;
     text-align: center;
     border-radius: 50%;
-    background-color: #00000000;
+    background-color: transparent;
     transition: 
         background-color 0.2s;
 }
