Modify .closeBttn styling
Potential fix for button on wrong side and pushing down links.

--- a/azurelyte/styles/global.css
+++ b/azurelyte/styles/global.css
@@ -166,6 +166,9 @@ margins keep collapsing, so it needs to be all padding. */
 
 .closeBttn {
     float: right;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
 .material-symbols-rounded {
